feat: Implement API response structure and global exception handling; add CORS configuration and refactor controllers to use ApiResponse