@@ -2,25 +2,14 @@ package com.tecs.taskmanager.controller;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import com.tecs.taskmanager.core.monitoing.process.ProcessMonitor;
 import com.tecs.taskmanager.core.snapshot.SnapshotCacheService;
-import com.tecs.taskmanager.dto.process.ProcessGroupDTO;
-import com.tecs.taskmanager.dto.process.ProcessInfoDTO;
-import com.tecs.taskmanager.dto.process.ProcessKillPreviewDTO;
-import com.tecs.taskmanager.dto.process.ProcessKillResponseDTO;
-import com.tecs.taskmanager.dto.process.ProcessSectionDTO;
-import com.tecs.taskmanager.dto.process.ProcessTreeDTO;
+import com.tecs.taskmanager.dto.common.ApiResponse;
+import com.tecs.taskmanager.dto.process.*;
 import com.tecs.taskmanager.dto.snapshot.SystemSnapshotDTO;
 
 @RestController
@@ -35,120 +24,114 @@ public class ProcessController {
         this.processMonitor = processMonitor;
     }
 
-    @GetMapping
-    public ResponseEntity<List<ProcessInfoDTO>> getAllProcesses() {
+    private SystemSnapshotDTO getSnapshotSafe() {
         SystemSnapshotDTO snapshot = cacheService.getSnapshot();
-
         if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
+            throw new RuntimeException("System snapshot not available");
         }
-        return ResponseEntity.ok(snapshot.getProcesses());
+        return snapshot;
+    }
+
+    @GetMapping
+    public ResponseEntity<ApiResponse<List<ProcessInfoDTO>>> getAllProcesses() {
+        return ResponseEntity.ok(
+                ApiResponse.success(getSnapshotSafe().getProcesses())
+        );
     }
 
     @GetMapping("/top")
-    public ResponseEntity<List<ProcessInfoDTO>> getTopProcesses(
-            @RequestParam(name = "limit", defaultValue = "10") int limit) {
-        SystemSnapshotDTO snapshot = cacheService.getSnapshot();
+    public ResponseEntity<ApiResponse<List<ProcessInfoDTO>>> getTopProcesses(@RequestParam(defaultValue = "10") int limit) {
 
-        if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
-        }
-        List<ProcessInfoDTO> top = snapshot.getProcesses()
+        List<ProcessInfoDTO> top = getSnapshotSafe().getProcesses()
                 .stream()
                 .sorted(Comparator.comparingDouble(ProcessInfoDTO::getCpuLoad).reversed())
                 .limit(limit)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(top);
+                .toList();
+
+        return ResponseEntity.ok(ApiResponse.success(top));
     }
 
     @GetMapping("/search")
-    public ResponseEntity<List<ProcessInfoDTO>> searchByName(@RequestParam(name = "name") String name) {
+    public ResponseEntity<ApiResponse<List<ProcessInfoDTO>>> searchByName(@RequestParam String name) {
 
-        SystemSnapshotDTO snapshot = cacheService.getSnapshot();
-
-        if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
-        }
-
-        List<ProcessInfoDTO> result = snapshot.getProcesses()
+        List<ProcessInfoDTO> result = getSnapshotSafe().getProcesses()
                 .stream()
                 .filter(p -> p.getName() != null &&
                         p.getName().equalsIgnoreCase(name))
                 .toList();
 
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(ApiResponse.success(result));
     }
 
     @GetMapping("/tree")
-    public ResponseEntity<List<ProcessTreeDTO>> getProcessTree() {
-        SystemSnapshotDTO snapshot = cacheService.getSnapshot();
-        if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
-        }
-        return ResponseEntity.ok(snapshot.getProcessTree());
+    public ResponseEntity<ApiResponse<List<ProcessTreeDTO>>> getProcessTree() {
+        return ResponseEntity.ok(
+                ApiResponse.success(getSnapshotSafe().getProcessTree())
+        );
     }
 
     @GetMapping("/{pid}")
-    public ResponseEntity<ProcessTreeDTO> getProcessByPid(@PathVariable("pid") int pid) {
-        SystemSnapshotDTO snapshot = cacheService.getSnapshot();
-        if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
-        }
-        ProcessTreeDTO result = findProcess(snapshot.getProcessTree(), pid);
+    public ResponseEntity<ApiResponse<ProcessTreeDTO>> getProcessByPid(@PathVariable int pid) {
+
+        ProcessTreeDTO result = findProcess(getSnapshotSafe().getProcessTree(), pid);
 
         if (result == null) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(404)
+                    .body(ApiResponse.error("Process not found"));
         }
-        return ResponseEntity.ok(result);
+
+        return ResponseEntity.ok(ApiResponse.success(result));
     }
 
     @GetMapping("/grouped")
-    public ResponseEntity<List<ProcessGroupDTO>> getGroupedProcesses() {
-
-        SystemSnapshotDTO snapshot = cacheService.getSnapshot();
-
-        if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
-        }
-
-        return ResponseEntity.ok(snapshot.getGroupedProcesses());
+    public ResponseEntity<ApiResponse<List<ProcessGroupDTO>>> getGroupedProcesses() {
+        return ResponseEntity.ok(
+                ApiResponse.success(getSnapshotSafe().getGroupedProcesses())
+        );
     }
 
     @GetMapping("/sections")
-    public ResponseEntity<List<ProcessSectionDTO>> getSectionProcesses() {
-
-        SystemSnapshotDTO snapshot = cacheService.getSnapshot();
-
-        if (snapshot == null) {
-            return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).build();
-        }
-        return ResponseEntity.ok(snapshot.getProcessSections());
+    public ResponseEntity<ApiResponse<List<ProcessSectionDTO>>> getSectionProcesses() {
+        return ResponseEntity.ok(
+                ApiResponse.success(getSnapshotSafe().getProcessSections())
+        );
     }
 
     @DeleteMapping("/{pid}")
-    public ResponseEntity<ProcessKillResponseDTO> killProcess(@PathVariable int pid,
-            @RequestParam(defaultValue = "false") boolean force) {
+    public ResponseEntity<ApiResponse<ProcessKillResponseDTO>> killProcess(@PathVariable int pid, @RequestParam(defaultValue = "false") boolean force) {
         ProcessKillResponseDTO response = processMonitor.killProcess(pid, force);
 
-        return response.isSuccess() ? ResponseEntity.ok(response) : ResponseEntity.badRequest().body(response);
+        if (!response.isSuccess()) {
+            return ResponseEntity.badRequest()
+                    .body(ApiResponse.error(response.getMessage()));
+        }
+
+        return ResponseEntity.ok(ApiResponse.success(response));
     }
 
     @GetMapping("/{pid}/preview-kill")
-    public ResponseEntity<ProcessKillPreviewDTO> previewKillTree(@PathVariable int pid) {
+    public ResponseEntity<ApiResponse<ProcessKillPreviewDTO>> previewKillTree( @PathVariable int pid) {
+
         ProcessKillPreviewDTO preview = processMonitor.previewKillTree(pid);
 
         if (preview == null) {
-            return ResponseEntity.notFound().build();
+            return ResponseEntity.status(404)
+                    .body(ApiResponse.error("Process not found"));
         }
-        return ResponseEntity.ok(preview);
+
+        return ResponseEntity.ok(ApiResponse.success(preview));
     }
 
     @DeleteMapping("/{pid}/kill-tree")
-    public ResponseEntity<ProcessKillResponseDTO> killProcessTree(@PathVariable int pid,
-            @RequestParam(defaultValue = "false") boolean force) {
+    public ResponseEntity<ApiResponse<ProcessKillResponseDTO>> killProcessTree( @PathVariable int pid, @RequestParam(defaultValue = "false") boolean force) {
         ProcessKillResponseDTO response = processMonitor.killProcessTree(pid, force);
 
-        return response.isSuccess() ? ResponseEntity.ok(response) : ResponseEntity.badRequest().body(response);
+        if (!response.isSuccess()) {
+            return ResponseEntity.badRequest()
+                    .body(ApiResponse.error(response.getMessage()));
+        }
+
+        return ResponseEntity.ok(ApiResponse.success(response));
     }
 
     private ProcessTreeDTO findProcess(List<ProcessTreeDTO> roots, int pid) {
@@ -159,9 +142,7 @@ public class ProcessController {
 
             ProcessTreeDTO found = findProcess(root.getChildren(), pid);
 
-            if (found != null) {
-                return found;
-            }
+            if (found != null) return found;
         }
         return null;
     }
